syntax = "proto3";

package WorkoutService;

option go_package = "github.com/pavel/workout_service/pkg/pb/workout";

service WorkoutService {
  rpc Create(CreateWorkoutRequest) returns (CreateWorkoutResponse);
  rpc Delete(DeleteWorkoutRequest) returns (DeleteWorkoutResponse);
  rpc Update(UpdateWorkoutRequest) returns (UpdateWorkoutResponse);
  rpc All(WorkoutFilteringRequest) returns (WorkoutFilteringResponse);
  rpc WorkoutTitleRecommendation(WorkoutTitleRecommendationRequest) returns (WorkoutTitleRecommendationResponse);
}

service ExerciseService{
  rpc Create(CreateExerciseRequest) returns (CreateExerciseResponse);
  rpc Update(UpdateExerciseRequest) returns (UpdateExerciseResponse);
  rpc Delete(DeleteExerciseRequest) returns (DeleteExerciseResponse);
  rpc ExerciseTitleRecommendation(ExerciseTitleRecommendationRequest) returns (ExerciseTitleRecommendationResponse);

}

message CreateExerciseRequest{
  uint64 user_id = 1;
  uint64 workout_id = 2;
  string title = 3;
  string description = 4;
}

message CreateExerciseResponse{
  uint32 status = 1;
  string error = 2;
  Exercise exercise = 3;
}

message UpdateExerciseRequest{
  uint64 id = 1;
  uint64 user_id = 2;
  uint64 workout_id = 3;
  bytes query = 4;
}

message UpdateExerciseResponse{
  uint32 status = 1;
  string error = 2;
  Exercise exercise = 3;
}

message DeleteExerciseRequest{
  uint64 id = 1;
  uint64 user_id = 2;
  uint64 workout_id = 3;
}

message DeleteExerciseResponse{
  uint32 status = 1;
  string error = 2;
}

message ExerciseTitleRecommendationRequest{
  string typingTitle = 1;
}

message ExerciseTitleRecommendationResponse{
  uint32 status = 1;
  string error = 2;
  repeated TitleRecommendation recommendationList = 3;
}

message Workout {
  uint64 id = 1;
  uint64 user_id = 2;
  string title = 3;
  string description = 4;
  bool is_done = 5;
  int64 appointed_time = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
  repeated Exercise exercises = 9;
}

message Exercise{
  uint64 id = 1;
  string title = 2;
  string description = 3;
  bool is_done = 4;
  repeated Repetition repetitions = 5;
}

message Repetition{
  uint64 id = 1;
  float weight = 2;
  uint32 count = 3;
  bool is_done = 4;
}

message TitleRecommendation{
  string title = 1;
}

message CreateWorkoutRequest{
  uint64 user_id= 1;
  string title = 2;
  string description = 3;
  int64 appointed_time = 4;
}

message CreateWorkoutResponse{
  uint32 status = 1;
  string error = 2;
  Workout workout = 3;
}

message WorkoutFilteringRequest{
  uint64 user_id = 1;
  bytes query = 2;
}

message WorkoutFilteringResponse{
  uint32 status = 1;
  string error = 2;
  repeated Workout workout = 3;
}


message WorkoutTitleRecommendationRequest{
  string typingTitle = 1;
}

message WorkoutTitleRecommendationResponse{
  uint32 status = 1;
  string error = 2;
  repeated TitleRecommendation recommendationList = 3;
}

message UpdateWorkoutRequest{
  uint64 id = 1;
  uint64 user_id = 2;
  bytes query = 3;
}

message UpdateWorkoutResponse{
  uint32 status = 1;
  string error = 2;
  Workout workout = 3;
}

message DeleteWorkoutRequest{
  uint64 id = 1;
  uint64 user_id = 2;
}

message DeleteWorkoutResponse{
  uint32 status = 1;
  string error = 2;
}